<resources>
    <string name="app_name">SmartPlug</string>
    <string name="plug">智能插座</string>
    <string name="sign_up">注册</string>
    <string name="log_in">登录</string>
    <string name="email">邮箱</string>
    <string name="password">密码</string>
    <string name="nickname">用户名</string>
    <string name="head">头像</string>
    <string name="or">或</string>
    <string name="change_password">修改密码</string>
    <string name="upload">同步至云端</string>
    <string name="download">同步至本地</string>
    <string name="device_manage">设备管理</string>
    <string name="device_list_manage">设备列表管理</string>
    <string name="del">删除设备</string>
    <string name="log_out">登出</string>
    <string name="setting">设置</string>
    <string name="edition">当前版本</string>
    <string name="new_edition">查看新版本</string>
    <string name="now_edition">2.5.1</string>
    <string name="feedback">反馈</string>
    <string name="myemail">hurui217@foxmail.com</string>
    <string name="about">关于</string>
    <string name="my_div">我的设备</string>
    <string name="add_div">添加设备</string>
    <string name="net_test">连接测试</string>
    <string name="power">实时功率</string>
    <string name="getting">获取中...</string>
    <string name="op">操作</string>
    <string name="on_off">开关</string>
    <string name="stat">统计信息</string>
    <string name="send_mess">发送消息</string>
    <string name="connect_info">连接状态信息</string>
    <string name="key">激活新设备</string>
    <string name="wifi">连接局域网内设备</string>
    <string name="web">搜索网络设备</string>
    <string name="info">北京航空航天大学\n第三十届“冯如杯”学生学术科技作品竞赛\n参赛作品</string>
</resources>
