<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00ffffff"
    tools:context=".UserFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="50dp">

            <ImageView
                android:id="@+id/user_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/head" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/sign_up"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/or"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/or"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/log_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/log_in"
                    android:textSize="20sp" />


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:orientation="vertical"
            android:paddingHorizontal="50dp"
            android:paddingBottom="100dp">

            <LinearLayout
                android:id="@+id/device_manage"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/device_manage"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/right" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/setting"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/setting"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/right" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/about"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/about"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/right" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


</FrameLayout>