<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgn"
    android:orientation="vertical"
    tools:context=".DeviceManageActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="15dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/device_list_manage"
            android:textSize="22sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey" />

    <LinearLayout
        android:id="@+id/upload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="syn"
        android:orientation="horizontal"
        android:paddingVertical="15dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/upload"
            android:textSize="22sp" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp"
            android:src="@drawable/right" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey" />

    <LinearLayout
        android:id="@+id/download"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="syn"
        android:orientation="horizontal"
        android:paddingVertical="15dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/download"
            android:textSize="22sp" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp"
            android:src="@drawable/right" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="del"
        android:orientation="horizontal"
        android:paddingVertical="15dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/del"
            android:textSize="22sp" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp"
            android:src="@drawable/right" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey" />

</LinearLayout>